--- a/tools/dotcms-cli/cli/docs/site-remove.adoc
+++ b/tools/dotcms-cli/cli/docs/site-remove.adoc
@@ -19,7 +19,8 @@ site-remove - *Use this command to remove a site.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*site remove* [*-h*] [*--non-interactive*] [*-tk*=_<token>_] _idOrName_
+*site remove* [*-h*] [*--non-interactive*] [*--dotcms-url*=_<remoteURL>_] [*-tk*=_<token>_]
+            _idOrName_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -39,6 +40,9 @@ site-remove - *Use this command to remove a site.*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
