--- a/tools/dotcms-cli/cli/docs/site-unarchive.adoc
+++ b/tools/dotcms-cli/cli/docs/site-unarchive.adoc
@@ -19,7 +19,7 @@ site-unarchive - *Use this command to unarchive a site.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*site unarchive* [*-h*] [*-tk*=_<token>_] _idOrName_
+*site unarchive* [*-h*] [*--dotcms-url*=_<remoteURL>_] [*-tk*=_<token>_] _idOrName_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -34,6 +34,9 @@ site-unarchive - *Use this command to unarchive a site.*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
