--- a/tools/dotcms-cli/cli/docs/content-type-find.adoc
+++ b/tools/dotcms-cli/cli/docs/content-type-find.adoc
@@ -19,9 +19,9 @@ content-type-find - *Use this command to find Content-types.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*content-type find* [*-h*] [*--non-interactive*] [*-tk*=_<token>_] [[*-n*=_<typeName>_]
-                  [*-s*=_<site>_] [*-o*=_<orderBy>_] [*-d*=_<direction>_] [*-p*=_<page>_]
-                  [*-ps*=_<pageSize>_]]
+*content-type find* [*-h*] [*--non-interactive*] [*--dotcms-url*=_<remoteURL>_]
+                  [*-tk*=_<token>_] [[*-n*=_<typeName>_] [*-s*=_<site>_] [*-o*=_<orderBy>_]
+                  [*-d*=_<direction>_] [*-p*=_<page>_] [*-ps*=_<pageSize>_]]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -38,6 +38,9 @@ Use --name in conjunction with *Filter/Search* Options.
 
 *-tk, --token*=_<token>_::
   A dotCMS token to use for authentication. 
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
