--- a/tools/dotcms-cli/cli/docs/content-type-pull.adoc
+++ b/tools/dotcms-cli/cli/docs/content-type-pull.adoc
@@ -19,9 +19,9 @@ content-type-pull - *Retrieves Content-types descriptors*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*content-type pull* [*-h*] [*-ff*] [*-fmt*=_<inputOutputFormat>_]
-                  [*--retry-attempts*=_<retryAttempts>_] [*-tk*=_<token>_]
-                  [*--workspace*=_<file>_] [_idOrName_]
+*content-type pull* [*-h*] [*-ff*] [*--dotcms-url*=_<remoteURL>_]
+                  [*-fmt*=_<inputOutputFormat>_] [*--retry-attempts*=_<retryAttempts>_]
+                  [*-tk*=_<token>_] [*--workspace*=_<file>_] [_idOrName_]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -49,6 +49,9 @@ content-type-pull - *Retrieves Content-types descriptors*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-ff, --fail-fast*::
   Stop at first failure and exit the command. By default, this option is disabled, and the command will continue on error.
