--- a/tools/dotcms-cli/cli/docs/content-type-remove.adoc
+++ b/tools/dotcms-cli/cli/docs/content-type-remove.adoc
@@ -19,7 +19,8 @@ content-type-remove - *Use this command to remove Content-types.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*content-type remove* [*-h*] [*--non-interactive*] [*-tk*=_<token>_] _<idOrVar>_
+*content-type remove* [*-h*] [*--non-interactive*] [*--dotcms-url*=_<remoteURL>_]
+                    [*-tk*=_<token>_] _<idOrVar>_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -36,6 +37,9 @@ content-type-remove - *Use this command to remove Content-types.*
 
 *-tk, --token*=_<token>_::
   A dotCMS token to use for authentication. 
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
