--- a/tools/dotcms-cli/cli/docs/files-tree.adoc
+++ b/tools/dotcms-cli/cli/docs/files-tree.adoc
@@ -19,8 +19,8 @@ files-tree - *dotCMS Files Tree*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*files tree* [*-h*] [*-ee*] [*-d*=_<depth>_] [*-ea*=_patterns_] [*-ef*=_patterns_] [*-ia*=_patterns_]
-           [*-if*=_patterns_] [*-tk*=_<token>_] _path_
+*files tree* [*-h*] [*-ee*] [*-d*=_<depth>_] [*--dotcms-url*=_<remoteURL>_] [*-ea*=_patterns_]
+           [*-ef*=_patterns_] [*-ia*=_patterns_] [*-if*=_patterns_] [*-tk*=_<token>_] _path_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -38,6 +38,9 @@ files-tree - *dotCMS Files Tree*
 
 *-d*, *--depth*=_<depth>_::
   Limits the depth of the directory tree to <number> levels. The default value is 0, which means that only the files and directories in the root directory are displayed. If the <number> argument is not provided, there is no limit on the depth of the directory tree.
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-ea, --excludeAsset*=_patterns_::
   Exclude assets matching the given glob patterns. Multiple patterns can be specified, separated by commas.
