--- a/tools/dotcms-cli/cli/docs/language-find.adoc
+++ b/tools/dotcms-cli/cli/docs/language-find.adoc
@@ -19,7 +19,7 @@ language-find - *Get all existing languages*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*language find* [*-h*] [*-tk*=_<token>_]
+*language find* [*-h*] [*--dotcms-url*=_<remoteURL>_] [*-tk*=_<token>_]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -34,6 +34,9 @@ language-find - *Get all existing languages*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
