--- a/tools/dotcms-cli/cli/docs/language-pull.adoc
+++ b/tools/dotcms-cli/cli/docs/language-pull.adoc
@@ -19,7 +19,7 @@ language-pull - *Retrieves languages descriptors*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*language pull* [*-h*] [*-ff*] [*-fmt*=_<inputOutputFormat>_]
+*language pull* [*-h*] [*-ff*] [*--dotcms-url*=_<remoteURL>_] [*-fmt*=_<inputOutputFormat>_]
               [*--retry-attempts*=_<retryAttempts>_] [*-tk*=_<token>_]
               [*--workspace*=_<file>_] [_idOrIso_]
 
@@ -49,6 +49,9 @@ language-pull - *Retrieves languages descriptors*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-ff, --fail-fast*::
   Stop at first failure and exit the command. By default, this option is disabled, and the command will continue on error.
