--- a/tools/dotcms-cli/cli/docs/language-remove.adoc
+++ b/tools/dotcms-cli/cli/docs/language-remove.adoc
@@ -19,7 +19,8 @@ language-remove - *Remove a language*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*language remove* [*-h*] [*--non-interactive*] [*-tk*=_<token>_] _<languageIdOrIso>_
+*language remove* [*-h*] [*--non-interactive*] [*--dotcms-url*=_<remoteURL>_]
+                [*-tk*=_<token>_] _<languageIdOrIso>_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -33,6 +34,9 @@ language-remove - *Remove a language*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
