--- a/tools/dotcms-cli/cli/docs/pull.adoc
+++ b/tools/dotcms-cli/cli/docs/pull.adoc
@@ -19,8 +19,8 @@ pull - *dotCMS global pull*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*pull* [*-h*] [*-ff*] [*-fmt*=_<inputOutputFormat>_] [*--retry-attempts*=_<retryAttempts>_]
-     [*-tk*=_<token>_] [*--workspace*=_<file>_]
+*pull* [*-h*] [*-ff*] [*--dotcms-url*=_<remoteURL>_] [*-fmt*=_<inputOutputFormat>_]
+     [*--retry-attempts*=_<retryAttempts>_] [*-tk*=_<token>_] [*--workspace*=_<file>_]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -34,6 +34,9 @@ pull - *dotCMS global pull*
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-ff, --fail-fast*::
   Stop at first failure and exit the command. By default, this option is disabled, and the command will continue on error.
