--- a/tools/dotcms-cli/cli/docs/site-copy.adoc
+++ b/tools/dotcms-cli/cli/docs/site-copy.adoc
@@ -19,8 +19,8 @@ site-copy - *Use this command to copy an existing site.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*site copy* [*-ah*] [*-cn*=_copyName_] *-in*=_idOrName_ [*-tk*=_<token>_] [[*-p*] [*-c*] [*-f*] [*-l*]
-          [*-t*] [*-var*]]
+*site copy* [*-ah*] [*-cn*=_copyName_] [*--dotcms-url*=_<remoteURL>_] *-in*=_idOrName_
+          [*-tk*=_<token>_] [[*-p*] [*-c*] [*-f*] [*-l*] [*-t*] [*-var*]]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -43,6 +43,9 @@ site-copy - *Use this command to copy an existing site.*
 
 *-cn, --copyName*=_copyName_::
   New Site name.
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
