--- a/tools/dotcms-cli/cli/docs/site-create.adoc
+++ b/tools/dotcms-cli/cli/docs/site-create.adoc
@@ -19,7 +19,7 @@ site-create - *Quick way to create a Site *
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*site create* [*-h*] [*-tk*=_<token>_] _<siteName>_
+*site create* [*-h*] [*--dotcms-url*=_<remoteURL>_] [*-tk*=_<token>_] _<siteName>_
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -39,6 +39,9 @@ site-create - *Quick way to create a Site *
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
