--- a/tools/dotcms-cli/cli/docs/site-find.adoc
+++ b/tools/dotcms-cli/cli/docs/site-find.adoc
@@ -19,8 +19,8 @@ site-find - *Use this command to Search / Find Sites.*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*site find* [*-h*] [*--non-interactive*] [*-tk*=_<token>_] [[*-n*=_<name>_] [*-ar*] [*-l*]
-          [*-p*=_<page>_] [*-s*=_<pageSize>_]]
+*site find* [*-h*] [*--non-interactive*] [*--dotcms-url*=_<remoteURL>_] [*-tk*=_<token>_]
+          [[*-n*=_<name>_] [*-ar*] [*-l*] [*-p*=_<page>_] [*-s*=_<pageSize>_]]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -35,6 +35,9 @@ Use --name in conjunction with *Filter/Search* Options.
 
 // tag::picocli-generated-man-section-options[]
 == Options
+
+*--dotcms-url*=_<remoteURL>_::
+  The dotCMS URL to connect to. This option must be used along with the token option, which provides the token for the specified dotCMS URL.
 
 *-h*, *--help*::
   Display this help message.
