--- a/tools/dotcms-cli/cli/docs/files-push.adoc
+++ b/tools/dotcms-cli/cli/docs/files-push.adoc
@@ -19,8 +19,9 @@ files-push - *dotCMS Files push*
 // tag::picocli-generated-man-section-synopsis[]
 == Synopsis
 
-*files push* [*-h*] [*--dry-run*] [*-ff*] [*-ra*] [*-rf*] [*--dotcms-url*=_<remoteURL>_]
-           [*--retry-attempts*=_<retryAttempts>_] [*-tk*=_<token>_] [_path_]
+*files push* [*-h*] [*--dry-run*] [*-ff*] [*-ra*] [*-rf*] [*-w*[=_watch_]]
+           [*--dotcms-url*=_<remoteURL>_] [*--retry-attempts*=_<retryAttempts>_]
+           [*-tk*=_<token>_] [_path_]
 
 // end::picocli-generated-man-section-synopsis[]
 
@@ -58,6 +59,9 @@ files-push - *dotCMS Files push*
 
 *-tk, --token*=_<token>_::
   A dotCMS token to use for authentication. 
+
+*-w*, *--watch*[=_watch_]::
+  When this option is enabled the tool watches for file changes within the push path If a change is detected the push operation gets triggered. The default watch interval is 2 seconds, but this can set passing an int value to this option.
 
 // end::picocli-generated-man-section-options[]
 
